--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^9.1.4",
-    "prettier-plugin-ejs": "^1.0.3"
+    "prettier-plugin-ejs": "^1.0.3",
+    "puppeteer": "^24.36.1"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
