--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "puppeteer": "^24.36.1"
   },
   "devDependencies": {
+    "eslint": "^9.39.2",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11"
   },
@@ -23,7 +24,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seed/db.js"
+    "seed": "node seed/db.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
